--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<title>You are an Idiot!</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		
-		<link rel="stylesheet" href="/styles/styles.css" type="text/css" />
+		<link rel="stylesheet" href="styles/styles.css" type="text/css" />
 	</head>
 
 	<body class="adaptive">
@@ -739,9 +739,9 @@
 		</audio>
 
 		<script data-cfasync="false" src="/cdn/email-decode.min.js"></script>
-		<script src="/scripts/safe.js" type="application/javascript"></script>
-		<script src="/scripts/math.js" type="application/javascript"></script>
-		<script src="/scripts/cleanup.js" type="application/javascript"></script>
-		<script src="/scripts/you.js" type="application/javascript"></script>
+		<script src="scripts/safe.js" type="application/javascript"></script>
+		<script src="scripts/math.js" type="application/javascript"></script>
+		<script src="scripts/cleanup.js" type="application/javascript"></script>
+		<script src="scripts/you.js" type="application/javascript"></script>
 	</body>
 </html>
