--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>You are an Idiot!</title>
 
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		
 		<link rel="stylesheet" href="styles/styles.css" type="text/css" />
@@ -731,11 +731,11 @@
 		</main>	
 	
 		<audio id="youare-audio" hidden>
-			<source src="/media/youare.mp3" type="audio/mp3">
+			<source src="media/youare.mp3" type="audio/mp3">
 		</audio>
 		
 		<audio id="youare-overlap" hidden>
-			<source src="/media/youare.mp3" type="audio/mp3">
+			<source src="media/youare.mp3" type="audio/mp3">
 		</audio>
 
 		<script data-cfasync="false" src="/cdn/email-decode.min.js"></script>
