--- a/lol.html
+++ b/lol.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		
-		<link rel="stylesheet" href="/styles/styles.css" type="text/css" />
+		<link rel="stylesheet" href="styles/styles.css" type="text/css" />
 	</head>
 
 	<body class="adaptive">
@@ -730,10 +730,10 @@
 		</main>
 
 		<audio id="youare-audio" autoplay loop hidden>
-			<source src="/media/youare.mp3" type="audio/mp3">
+			<source src="media/youare.mp3" type="audio/mp3">
 		</audio>
 
-		<script src="/scripts/math.js" type="application/javascript"></script>
-		<script src="/scripts/lol.js" type="application/javascript"></script>
+		<script src="scripts/math.js" type="application/javascript"></script>
+		<script src="scripts/lol.js" type="application/javascript"></script>
 	</body>
 </html>
