--- a/lol.html
+++ b/lol.html
@@ -3,8 +3,8 @@
 	<head>		
 		<title>You are an Idiot!</title>
 		
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		
 		<link rel="stylesheet" href="styles/styles.css" type="text/css" />
 	</head>
